--- a/index.html
+++ b/index.html
@@ -25,55 +25,45 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse topnavbar">
       <ul class="nav navbar-nav navbar-right dropstyle">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <span class="dropheads">Dropdown</span> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right dropstyle">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Dropdown</span> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right dropstyle">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Builds</span> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right dropstyle">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">streeTRACE</span> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-        </ul>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">streeTRACE</span> <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <!--Builds NavBar button-->
+      <ul class="nav navbar-nav navbar-right dropstyle">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Builds</span> <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right dropstyle">
+        <li><a href="#"><span class="dropheads">Link</span></a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right dropstyle">
+        <li><a href="#"><span class="dropheads">Link</span></a></li>
         <script src="js/navbardrop.js"></script>
-      </div>
+      </ul>
     </div>
   </div>
-  <img src="images/2560gtr.jpg" class="img-responsive"></img>
+  <!--GTR Main page picture-->
+  <img src="images/2560gtr.jpg" class="img-responsive gtr"></img>
+    <div class="sponsorimages">
+      <img src="images/sponsorbaselogos.png" class="center-block"></img>
+
+
+
+
+
 
 
 
