updated sponsors and navbar

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">streeTRACE</span> <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Another action</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Something else here</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Separated link</span></a></li>
           </ul>
         </li>
       </ul>
@@ -39,10 +39,10 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Builds</span> <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Another action</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Something else here</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Separated link</span></a></li>
           </ul>
         </li>
       </ul>
@@ -56,7 +56,7 @@
     </div>
   </div>
   <!--GTR Main page picture-->
-  <img src="images/2560gtr.jpg" class="img-responsive gtr"></img>
+  <img src="images/2560gtr.jpg" class="img-responsive gtrmain"></img>
     <div class="sponsorimages">
       <img src="images/sponsorbaselogos.png" class="center-block"></img>
 
