Updated social network icons and headers

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300' rel='stylesheet' type='text/css'>
-  <link href="./stylesheet.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link href="./css/stylesheet.css" rel="stylesheet">
 </head>
 <body>
   <!-- Start of Navbar -->
@@ -107,7 +108,7 @@
         </div>
       </div>
       <div class="col-sm-4">
-        <div class="skyforgedlogo">
+        <div class="skyforged">
           <a href="http://www.sky-forged.sakura.ne.jp">
           <img src="images/skyforgedlogo.png" class="center-block"></a>
         </div>
@@ -143,6 +144,81 @@
       </div>
     </div>
   </div>
+  <div class="container eventsquares">
+    <div class="row">
+      <div class="col-sm-7">
+        <div class="article1 module">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <div class="container socialmedia">
+    <div class="row">
+      <div class="col-sm-12">
+        <p class="followus">Follow us on social media!</p>
+      </div>
+    </div>
+    <div class="row socialicons">
+      <div class="col-sm-4">
+        <div class="media">
+          <div class="media-left media-top">
+            <a href="http://www.facebook.com">
+              <i class="fa fa-facebook-official fa-5x fbicon"></i>
+            </a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading fbheader">Facebook</h4>
+            <p class="fbtext">Check out our Facebook to view our latest news & information!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="media">
+          <div class="media-left media-top">
+            <a href="http://www.youtube.com">
+              <i class="fa fa-youtube-play fa-5x tubeicon"></i>
+            </a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading tubeheader">Youtube</h4>
+            <p class="tubetext">View our Youtube channel for our cool videos!</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="media">
+          <div class="media-left media-top">
+            <a href="http://www.instagram.com">
+              <i class="fa fa-instagram fa-5x instaicon"></i></a>2
+            </a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading instaheader">Instagram</h4>
+            <p class="instatext">Follow our Instagram to view our latest photos!</p>
+          </div>
+        </div>
+      </div>
+      
+  
+
+
+
+
+
+
+
+
 </body>
 </html>
 
