Updated event and article squares

--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
       <div class="col-sm-4">
         <div class="speedhunters">
           <a href="http://www.speedhunters.com">
-          <img src="images/speedhunterslogo.png" class="center-block"></a>
+          <img src="images/speedhunterslogo.png" class="center-block img-responsive"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="motorhead">
           <a href="http://www.motorheadjp.com">
-          <img src="images/motorheadlogo.png" class="center-block"></a>
+          <img src="images/motorheadlogo.png" class="center-block img-responsive"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="fiexhaust">
           <a href="http://www.fi-exhaust.com">
-          <img src="images/fieexhaustlogo.png" class="center-block"></a>
+          <img src="images/fieexhaustlogo.png" class="center-block img-responsive"></a>
         </div>
       </div>
     </div>
@@ -98,19 +98,19 @@
       <div class="col-sm-4">
         <div class="formuladrift">
           <a href="http://www.formulad.jp">
-          <img src="images/formuladriftlogo.png" class="center-block"></a>
+          <img src="images/formuladriftlogo.png" class="center-block img-responsive"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="forgiato">
           <a href="http://www.forgiato.com">
-          <img src="images/forgiatologo.png" class="center-block"></a>
+          <img src="images/forgiatologo.png" class="center-block img-responsive"></a>
         </div>
       </div>
       <div class="col-sm-4">
         <div class="skyforged">
           <a href="http://www.sky-forged.sakura.ne.jp">
-          <img src="images/skyforgedlogo.png" class="center-block"></a>
+          <img src="images/skyforgedlogo.png" class="center-block img-responsive"></a>
         </div>
       </div>
     </div>
@@ -146,12 +146,15 @@
   </div>
   <div class="container eventsquares">
     <div class="row">
-      <div class="col-sm-7">
-        <div class="article1 module">
-
-
-
-
+      <div class="col-sm-6">
+        <div id="article1">
+          <div id="bellaitalia"><img src="images/redferrari.jpg" class="img-responsive"></div>
+            <p class="bellastyle">Best of Bella Italia 2015</p>
+          </div>
+        </div>
+      </div>
+          
+        
 
 
 
