Updated vote for build section

--- a/index.html
+++ b/index.html
@@ -144,15 +144,22 @@
       </div>
     </div>
   </div>
-  <div class="container eventsquares">
-    <div class="row">
+  <hr width="600" size="200" class="horizontal">
+  <!--Article square section-->
+  <div class="container articles">
+    <div class="row events">
       <div class="col-sm-6">
-        <div id="article1">
-          <div id="bellaitalia"><img src="images/redferrari.jpg" class="img-responsive"></div>
-            <p class="bellastyle">Best of Bella Italia 2015</p>
-          </div>
+        <div class="g37square">
+          <div class="sema"><img src="images/libertywalk458.jpg" class="img-responsive center-block g37"></div>
+          <p class="semastyle">Sema 2015</p>
         </div>
       </div>
+      <div class="col-sm-6">
+        <div class="article2">
+          <div class="drifting"><img src="images/libertywalkgtr.jpg" class="img-responsive center-block g37"></div>
+        </div>
+      </div>
+
           
         
 
