Updated vote section captions

--- a/index.html
+++ b/index.html
@@ -145,20 +145,23 @@
     </div>
   </div>
   <hr width="600" size="200" class="horizontal">
-  <!--Article square section-->
-  <div class="container articles">
-    <div class="row events">
+  <!--Vote square section-->
+  <div class="container votesection">
+    <div class="row votesquares">
       <div class="col-sm-6">
-        <div class="g37square">
-          <div class="sema"><img src="images/libertywalk458.jpg" class="img-responsive center-block g37"></div>
-          <p class="semastyle">Sema 2015</p>
+        <div class="square458">
+          <div class="vote1"><img src="images/libertywalk458.jpg" class="img-responsive italia458"></div>
+          <p class="italiastyle">Ferrari 458 LB</p>
         </div>
       </div>
       <div class="col-sm-6">
-        <div class="article2">
-          <div class="drifting"><img src="images/libertywalkgtr.jpg" class="img-responsive center-block g37"></div>
+        <div class="gtrsquare">
+          <div class="vote2"><img src="images/libertywalkgtr.jpg" class="img-responsive r35gtr"></div>
+          <p class="gtrstyle">Nissan GTR R35 LB</p>
         </div>
       </div>
+    </div>
+  </div>
 
           
         
