--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!--Main CSS-->
   <link href="./css/stylesheet.css" rel="stylesheet">
-  <!--Google Maps API-->
-   
-   <link href="./googleapi/googlemapstyle.css" rel="stylesheet">
+  <!--Google Maps API CSS-->
+  <link href="./googleapi/googlemapstyle.css" rel="stylesheet">
 </head>
 <body>
   <!-- Start of Navbar -->
@@ -161,6 +160,7 @@
         <div class="square458">
           <div class="vote1"><img src="images/libertywalk458.jpg" class="img-responsive italia458"></div>
           <p class="italiastyle">Ferrari 458 LB</p>
+          <script src="likebutton.js"></script>
         </div>
       </div>
       <div class="col-sm-6">
@@ -175,37 +175,47 @@
   <div class="container">
     <div class="col-sm-12">
       <div id="floating-panel">
-      <b>Start: </b>
-      <select id="start" onchange="calcRoute();">
-        <option value="chicago, il">Chicago</option>
-        <option value="san bernadino, ca">San Bernadino</option>
-      </select>
-      <b>End: </b>
-      <select id="end" onchange="calcRoute();">
-        <option value="st louis, mo">St Louis</option>
-        <option value="los angeles, ca">Los Angeles</option>
-      </select>
+        <b>Start: </b>
+        <select id="start" onchange="calcRoute();">
+          <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
+          <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
+          <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
+          <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
+          <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
+        </select>
+        <b>End: </b>
+        <select id="end" onchange="calcRoute();">
+          <option value="670 Spectrum Center Dr, Irvine, CA 92618">Irvine Spectrum</option>
+          <option value="1111 S Figueroa St, Los Angeles, CA 90015">Staples Center</option>
+          <option value="1000 Elysian Park Ave, Los Angeles, CA 90012">Dodgers Stadium</option>
+
+        </select>
       </div>
       <div id="map"></div>
-      <script src="./googleapi/directions.js" ></script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxlOSIO2OxUusILsiaBWaXeaU42s-MNss&signed_in=true&callback=initMap"></script>
+        <script src="./googleapi/directions.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxlOSIO2OxUusILsiaBWaXeaU42s-MNss&signed_in=true&callback=initMap"></script>
+      </div>
     </div>
   </div>
-
-
-      
-        
-
-
-
-
-
-
-
-
-
-
-
+  <div class="container">
+    <div class="row scoreboard">
+      <div class="col-sm-4">
+        <div class="topg37">
+          <img src="images/libertywalkg37.jpg" class="center-block lbg37">
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="topg37">
+          <img src="" class="center-block lbg37"> 
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="topg37">
+          <img src="images/libertywalkg37.jpg" class="center-block lbg37">
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container socialmedia">
     <div class="row">
       <div class="col-sm-12">
