Updated javascript files for bootstrap modal

--- a/index.html
+++ b/index.html
@@ -35,34 +35,34 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right dropstyle">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Dropdown</span> <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Guides</span> <b class="caret"></b></a>
           <ul class="dropdown-menu dropbackground">
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Drag Racing</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Drifting</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Shift Techniques</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Installing Parts</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Safety</span></a></li>
           </ul>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right dropstyle">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Dropdown</span> <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Parts</span> <b class="caret"></b></a>
           <ul class="dropdown-menu dropbackground">
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Performance</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Exhaust</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Exterior</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Interior</span></a></li>
             <script src="js/navbardrop.js"></script>
           </ul>
         </li>
       </ul>
       <!-- Navbar button link menus section -->
       <ul class="nav navbar-nav navbar-right dropstyle">
-        <li><a href="#"><span class="dropheads">Maps</span></a></li>
+        <li><a href="#"><span class="dropheads">Builds</span></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right dropstyle">
-        <li><a href="#"><span class="dropheads">Builds</span></a></li>
+        <li><a href="#"><span class="dropheads">Maps</span></a></li>
       </ul>
     </div>
   </div>
