Updated javascript file for modal #2

--- a/modaltest.html
+++ b/modaltest.html
@@ -11,12 +11,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <div class="container votesection">
-    <div class="row votesquares">
-      <div class="col-sm-6">
-        <script src="testing.js"></script>
-      </div>
-    </div>
-  </div>
+  <div id="testing">
+  <script src="modal.js"></script>
 </body>
 </html>
