Finished javascript vote section modal for ferrari

--- a/index.html
+++ b/index.html
@@ -35,34 +35,34 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right dropstyle">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Dropdown</span> <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Guides</span> <b class="caret"></b></a>
           <ul class="dropdown-menu dropbackground">
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Drag Racing</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Drifting</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Shift Techniques</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Installing Parts</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Safety</span></a></li>
           </ul>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right dropstyle">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Dropdown</span> <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Parts</span> <b class="caret"></b></a>
           <ul class="dropdown-menu dropbackground">
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
-            <li><a href="#"><span class="dropliststyle">Action</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Performance</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Exhaust</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Exterior</span></a></li>
+            <li><a href="#"><span class="dropliststyle">Interior</span></a></li>
             <script src="js/navbardrop.js"></script>
           </ul>
         </li>
       </ul>
       <!-- Navbar button link menus section -->
       <ul class="nav navbar-nav navbar-right dropstyle">
-        <li><a href="#"><span class="dropheads">Link</span></a></li>
+        <li><a href="#"><span class="dropheads">Builds</span></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right dropstyle">
-        <li><a href="#"><span class="dropheads">Link</span></a></li>
+        <li><a href="#"><span class="dropheads">Maps</span></a></li>
       </ul>
     </div>
   </div>
@@ -153,24 +153,10 @@
     </div>
   </div>
   <hr width="600" size="200" class="horizontal">
+  <h1 class="voteday">Vote of the day</h1>
   <!--Vote square section-->
-  <div class="container votesection">
-    <div class="row votesquares">
-      <div class="col-sm-6">
-        <div class="square458">
-          <div class="vote1"><img src="images/libertywalk458.jpg" class="img-responsive italia458"></div>
-          <p class="italiastyle">Ferrari 458 LB</p>
-          <script src="likebutton.js"></script>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="gtrsquare">
-          <div class="vote2"><img src="images/libertywalkgtr.jpg" class="img-responsive r35gtr"></div>
-          <p class="gtrstyle">Nissan GTR R35 LB</p>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div id="fModal"></div>
+  <script src="modal.js"></script>
   <!--Google Race Map-->
   <div class="container">
     <div class="col-sm-12">
@@ -188,7 +174,6 @@
           <option value="670 Spectrum Center Dr, Irvine, CA 92618">Irvine Spectrum</option>
           <option value="1111 S Figueroa St, Los Angeles, CA 90015">Staples Center</option>
           <option value="1000 Elysian Park Ave, Los Angeles, CA 90012">Dodgers Stadium</option>
-
         </select>
       </div>
       <div id="map"></div>
@@ -201,17 +186,17 @@
     <div class="row scoreboard">
       <div class="col-sm-4">
         <div class="topg37">
-          <img src="images/libertywalkg37.jpg" class="center-block lbg37">
+          <img src="images/libertywalkg37.jpg" class="pull-right lbg37">
         </div>
       </div>
       <div class="col-sm-4">
         <div class="topg37">
-          <img src="" class="center-block lbg37"> 
+          <img src="images/libertywalkm4.jpg" class="center-block lbg37"> 
         </div>
       </div>
       <div class="col-sm-4">
         <div class="topg37">
-          <img src="images/libertywalkg37.jpg" class="center-block lbg37">
+          <img src="images/libertywalkg37.jpg" class="pull-left lbg37">
         </div>
       </div>
     </div>
@@ -273,6 +258,7 @@
 
 
 </body>
+
 </html>
 
 
