Updated front page styling

--- a/index.html
+++ b/index.html
@@ -152,21 +152,23 @@
       </div>
     </div>
   </div>
-  <hr width="600" size="200" class="horizontal">
+  <hr width="600" size="200" class="horizontalOne">
   <h1 class="voteday">Vote of the day</h1>
   <!--Vote square section-->
   <div id="fModal"></div>
   <script src="modal.js"></script>
+    <hr width="600" size="500" class="horizontalTwo">
   <!--Google Race Map-->
+  <h1 class="raceHead">Race Map</h1>
   <div class="container">
     <div class="col-sm-12">
       <div id="floating-panel">
         <b>Start: </b>
         <select id="start" onchange="calcRoute();">
-          <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
-          <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
-          <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
-          <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
+          <option value="4590 MacArthur Blvd, Newport Beach, CA 92660">OCCS</option>
+          <option value="5500 Irvine Center Dr, Irvine, CA 92618">Irvine Valley College</option>
+          <option value="University of California, Irvine
+          Irvine, CA 92697 ">UCI</option>
           <option value="3951 Irvine Blvd, Irvine, CA 92602">NorthPark Plaza</option>
         </select>
         <b>End: </b>
@@ -174,6 +176,7 @@
           <option value="670 Spectrum Center Dr, Irvine, CA 92618">Irvine Spectrum</option>
           <option value="1111 S Figueroa St, Los Angeles, CA 90015">Staples Center</option>
           <option value="1000 Elysian Park Ave, Los Angeles, CA 90012">Dodgers Stadium</option>
+          <option value="2800 E Observatory Rd, Los Angeles, CA 90027">Griffith Observatory</option>
         </select>
       </div>
       <div id="map"></div>
@@ -183,6 +186,9 @@
     </div>
   </div>
   <div class="container">
+    <div class="row">
+      <h1 class="topracers">Top Racers</h1>
+    </div>
     <div class="row scoreboard">
       <div class="col-sm-4">
         <div class="topg37">
