Updated page  with modal and styling

--- a/index.html
+++ b/index.html
@@ -155,8 +155,52 @@
   <hr width="600" size="200" class="horizontalOne">
   <h1 class="voteday">Vote of the day</h1>
   <!--Vote square section-->
-  <div id="fModal"></div>
-  <script src="modal.js"></script>
+  <div class="container votesection">
+    <div class="row votesquares">
+      <div class="col-sm-6">
+        <a href="#siteModal" role="button" data-toggle="modal" data-target=".modalOne" id="firstModal">
+        <div class="squareOne">
+          <div class="vote1"><img src="images/libertywalk458.jpg" class="img-responsive italia458"></div>
+          <p class="italiastyle">Ferrari 458 Italia</p>
+        </div>
+        <div class="modal modalOne" tabindex="-1" role="dialog">
+          <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="modalLabel">Modal Title</h4>
+              </div>
+              <div class="modal-body"><h4>Thank you for voting!</h4></div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default">Close</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <a href="#siteModal" role="button" data-toggle="modal" data-target=".modalTwo" id="secondModal">
+        <div class="squareTwo">
+          <div class="vote2"><img src="images/libertywalkgtr.jpg" class="img-responsive r35gtr"></div>
+          <p class="gtrstyle">Nissan R35 GT-R</p>
+        </div>
+        <div class="modal modalTwo" tabindex="-1" role="dialog">
+          <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Modal Title</h4>
+              </div>
+              <div class="modal-body">Thank you for voting!</h4></div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default">Close</button></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
     <hr width="600" size="500" class="horizontalTwo">
   <!--Google Race Map-->
   <h1 class="raceHead">Race Map</h1>
@@ -180,7 +224,7 @@
         </select>
       </div>
       <div id="map"></div>
-        <script src="./googleapi/directions.js"></script>
+        <script src="./googleapi/googlemap.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBxlOSIO2OxUusILsiaBWaXeaU42s-MNss&signed_in=true&callback=initMap"></script>
       </div>
     </div>
@@ -253,18 +297,9 @@
           </div>
         </div>
       </div>
-      
-  
-
-
-
-
-
-
-
-
+    </div>
+  </div>
 </body>
-
 </html>
 
 
