Updated scoreboard section on hover stats

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Navbar responsive display section -->
     <div class="navbar-header">
       <img src="images/streetlogo3.png" class="streetlogo">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-s-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -32,7 +32,7 @@
       </button>
     </div>
     <!-- Navbar dropdown menus section-->
-    <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <div class="collapse navbar-collapse navbar-s-collapse">
       <ul class="nav navbar-nav navbar-right dropstyle">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="dropheads">Guides</span> <b class="caret"></b></a>
@@ -168,7 +168,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="modalLabel">Modal Title</h4>
+                <h4 class="modal-title" id="modalLabel">Modal Title.</h4>
               </div>
               <div class="modal-body"><h4>Thank you for voting!</h4></div>
               <div class="modal-footer">
@@ -235,18 +235,24 @@
     </div>
     <div class="row scoreboard">
       <div class="col-sm-4">
-        <div class="topg37">
-          <img src="images/libertywalkg37.jpg" class="pull-right lbg37">
+        <div class="box">
+          <div class="overlay">
+            <span class="plus"><p>Alias:<br>Car:<br>Mods:<br>W/L:</p></span>
+          </div>
         </div>
       </div>
       <div class="col-sm-4">
-        <div class="topg37">
-          <img src="images/libertywalkm4.jpg" class="center-block lbg37"> 
+        <div class="box">
+          <div class="overlay">
+            <span class="plus"><p>Alias:<br>Car:<br>Mods:<br>W/L:</p></span>
+          </div>
         </div>
       </div>
       <div class="col-sm-4">
-        <div class="topg37">
-          <img src="images/libertywalkg37.jpg" class="pull-left lbg37">
+        <div class="box">
+          <div class="overlay">
+            <span class="plus"><p>Alias:<br>Car:<br>Mods:<br>W/L:</p></span>
+          </div>
         </div>
       </div>
     </div>
